--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="lorem">Your bones don\'t break, mine do. That\'s clear. Your cells react to bacteria and viruses differently than mine. You don\'t get sick, I do. That\'s also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. However unreal it may seem, we are connected, you and I. We\'re on the same curve, just on opposite ends.</string>
     <string name="transitionname_picture">transitionnamepicture</string>
     <string name="login_error">Ocurrio este error</string>
+    <string name="hintTitle">Titulo</string>
+    <string name="hintDescription">Descripcion</string>
+    <string name="text_button_createPost">Crear Post</string>
 </resources>
